--- a/playbook.yaml
+++ b/playbook.yaml
@@ -7,11 +7,11 @@
      ec2:
        region: ap-south-1
        key_name: sonarqube
-       instance_type: t2.micro
+       instance_type: t3a.micro
        image: ami-04bde106886a53080
        wait: yes
        wait_timeout: 500
        count: 1
        monitoring: no
-       vpc_subnet_id: subnet-099c5c4757d183892
+       vpc_subnet_id: subnet-019d14a13c07a30c5
        assign_public_ip: yes
