--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,17 +1,18 @@
 ---
-- hosts: 127.0.0.1   
-  connection: local
-  gather_facts: false
-  tasks:
-   - name: Creating ec2 instance
-     ec2:
-       region: ap-south-1
-       key_name: Task
-       instance_type: t3a.micro
-       image: ami-04bde106886a53080
-       wait: yes
-       wait_timeout: 500
-       count: 1
-       monitoring: no
-       vpc_subnet_id: subnet-019d14a13c07a30c5
-       assign_public_ip: yes
+  - name: "Create ec2"
+    hosts: localhost
+    connection: local   
+    gather_facts: false
+    tasks:
+    - name: Creating ec2 instance
+      ec2:
+        region: ap-south-1
+        key_name: Task
+        instance_type: t3a.micro
+        image: ami-04bde106886a53080
+        wait: yes
+        wait_timeout: 500
+        count: 1
+        monitoring: no
+        vpc_subnet_id: subnet-019d14a13c07a30c5
+        assign_public_ip: yes
