--- a/playbook.yaml
+++ b/playbook.yaml
@@ -25,13 +25,12 @@
       with_items: "{{ ec2.instances }}"
 
     - name: Wait for SSH to come up
-      wait_for:
-        host: "{{ item.public_dns_name }}"
-        port: 22
-        delay: 60
-        timeout: 320
-        state: started
-      with_items: "{{ ec2.instances }}"
+      local_action: 
+        wait_for:
+            host={{ item.public_ip }} 
+            port=22 
+            state=started
+        with_items: '{{ ec2.instances }}'
 
 
   - name: Configure instance
