--- a/playbook.yaml
+++ b/playbook.yaml
@@ -25,12 +25,11 @@
       with_items: "{{ ec2.instances }}"
 
     - name: Wait for SSH to come up
-      local_action: 
-        wait_for:
-            host={{ item.public_ip }} 
-            port=22 
-            state=started
-        with_items: '{{ ec2.instances }}'
+      wait_for:
+          host: "{{ item.public_dns_name }}"
+          port: 22 
+          state: started
+      with_items: '{{ ec2.instances }}'
 
 
   - name: Configure instance
