--- a/playbook.yaml
+++ b/playbook.yaml
@@ -30,10 +30,7 @@
           port: 22 
           state: started
       with_items: '{{ ec2.instances }}'
-    
-    - name: Copy the jar file from slave instance to new instance
-      copy: src=/home/ubuntu/ansible-maven-demo/target/myapp-1.0.jar dest=/home/ubuntu/
-      when: "{{ inventory_hostname == item.public_ip }}"
+
 
 
   - name: Configure instance
@@ -41,6 +38,10 @@
     become: True
     gather_facts: false
     tasks:
+      - name: Copy the jar file from slave instance to new instance
+        copy: src=/home/ubuntu/ansible-maven-demo/target/myapp-1.0.jar dest=/home/ubuntu/
+        when: "{{ inventory_hostname == 'localhost' }}"
+
       - name: Update and upgrade apt packages
         apt:
           upgrade: yes
