fixed apt pipeline issue

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -47,7 +47,7 @@
 
       - name: Update apt packages
         apt:
-          upgrade: yes
+          #upgrade: yes
           update_cache: yes
           cache_valid_time: 86400 #One day
     
