--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,36 +1,17 @@
 ---
-  - name: "Create ec2"
-    hosts: localhost
-    connection: local   
-    gather_facts: false
-    tasks:
-    - name: Creating ec2 instance
-      ec2:
-        region: ap-south-1
-        key_name: Task
-        instance_type: t3a.micro
-        image: ami-04bde106886a53080
-        wait: yes
-        wait_timeout: 500
-        count: 1
-        monitoring: no
-        vpc_subnet_id: subnet-019d14a13c07a30c5
-        assign_public_ip: yes
-      register: ec2
 
-    - name: Add new instance to host group
-      add_host:
-        hostname: "{{ item.public_ip }}"
-        groupname: launched
-      with_items: "{{ ec2.instances }}"
+  - name: Add new instance to host group
+    vars_files:
+      - ../tf_ansible_vars_file.yml
+    add_host:
+      hostname: "{tf_public_ip}"
+      groupname: launched
 
-    - name: Wait for SSH to come up
-      wait_for:
-          host: "{{ item.public_dns_name }}"
-          port: 22 
-          state: started
-      with_items: '{{ ec2.instances }}'
-
+  - name: Wait for SSH to come up
+    wait_for:
+        host: "{tf_public_dns_name}"
+        port: 22 
+        state: started
 
 
   - name: Configure instance
